[package]
name = "roblas"
version = "0.1.0"
authors = ["leonardodalinky <493987054@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc/math-header.html" ]

[dependencies]
num-complex = "0.4"
num-traits = "0.2"

